--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <header>
-            <h1>Titulo Site</h1>
+            <h1>Cursos</h1>
         </header>
         <article>
             <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis ducimus repellendus suscipit sapiente fugit officiis sint fugiat, unde et maxime fuga eveniet, similique aut dolorem itaque. Accusantium dolore facere iusto!</p>
         </article>
         <article>
             <h2>Artigo 001</h2>
-            <p>Texto Artigo 002</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo eum voluptas aut atque assumenda voluptatem sunt deleniti ab modi maxime! Possimus in eligendi repellendus ea hic dolorum vitae architecto ipsum?</p>
         </article>
     </main>
 </body>
